adjust other method , deleted .collect